--- a/index.html
+++ b/index.html
@@ -3,9 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PowerGPT</title>
+    <title>PowerGPT - The Free AI Assistant</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <h1>PowerGPT</h1>
+  <body class="dark-mode">
+    <header class="sticky-top bg-dark text-white p-2">
+      <nav class="container d-flex justify-content-between align-items-center">
+        <a href="#" class="text-white mr-auto">
+          <img
+            src="logo.png"
+            alt="PowerGPT Logo"
+            width="50px"
+            height="50px"
+            class="rounded-circle shadow"
+          />
+          PowerGPT
+        </a>
+        <a class="btn btn-outline-light" href="http://192.168.86.128:3000">
+          Get Started
+        </a>
+      </nav>
+    </header>
+    <main class="container p-5 mt-5">
+      <h1 class="text-white mb-4">Welcome to PowerGPT</h1>
+      <p class="lead text-white">
+        PowerGPT is a free AI assistant that helps you with your anything you
+        need.
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12 p-4 bg-dark shadow rounded">
+          <h2 class="text-white mb-3">What can PowerGPT do?</h2>
+          <div class="card-deck d-flex flex-wrap justify-content-center">
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-check text-success"></i>
+                <h5 class="mb-2">Write & show Websites</h5>
+                <p class="text-white mb-0">
+                  PowerGPT can write HTML/CSS/Js and show a live demo on what it
+                  looks like.
+                </p>
+              </div>
+            </div>
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-lock text-primary"></i>
+                <h5 class="mb-2">CustomGPT</h5>
+                <p class="text-white mb-0">
+                  PowerGPT can access your custom knolage bases and files when
+                  needed
+                </p>
+              </div>
+            </div>
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-question text-info"></i>
+                <h5 class="mb-2">Get Answers</h5>
+                <p class="text-white mb-0">
+                  PowerGPT can search the internet for the latest data and
+                  information so you get the most accurate output
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 col-md-10 col-sm-12 p-4 bg-dark shadow rounded">
+          <h2 class="text-white mb-3">What can you do with PowerGPT?</h2>
+          <div class="card-deck d-flex flex-wrap justify-content-center">
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-check text-success"></i>
+                <h5 class="mb-2">Write & show Websites</h5>
+                <p class="text-white mb-0">
+                  PowerGPT can write HTML/CSS/Js and show a live demo on what it
+                  looks like.
+                </p>
+              </div>
+            </div>
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-lock text-primary"></i>
+                <h5 class="mb-2">CustomGPT</h5>
+                <p class="text-white mb-0">
+                  You can create custom knloage bases and models to access those
+                  knolage bases with different capebilities. needed
+                </p>
+              </div>
+            </div>
+            <div class="card m-1" style="width: calc(33.33% - 20px)">
+              <div class="card-body p-4 bg-dark text-white">
+                <i class="fas fa-question text-info"></i>
+                <h5 class="mb-2">Tools</h5>
+                <p class="text-white mb-0">
+                  Create custom tools and functions that PowerGPT can use in
+                  order to best help you do what you need.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="bg-dark text-white p-4">
+      <p>&copy; 2023 PowerGPT. All rights reserved.</p>
+    </footer>
   </body>
 </html>
